# pma

./: .flake8  .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: config.py  event_bus.py  exceptions.py  main.py  sync_todos.py  utils.py
src/models/: __init__.py  base.py  directory.py  note.py  todo.py  utils.py  vault.py
src/modules/: __init__.py  base.py  notes_consistency.py  projects_engagement.py  scheduling.py
src/modules/sync_todos/: base.py  sync_todos.py  todoist.py
src/tests/: test_consistency.py  test_event_bus.py  test_projects_engagement.py  test_read_vault_from_fs.py  test_sync_todos.py  test_todos.py  test_vault.py  test_write_vault_to_fs.py  utils.py
src/tests/fixtures/vault_1/: note_1
src/tests/fixtures/vault_16/: note
src/tests/fixtures/vault_17/projects/: note
src/tests/fixtures/vault_18/projects/create/: ⽣ Personal Management App
src/tests/fixtures/vault_20/: note.md
src/tests/fixtures/vault_22/projects/: note
src/tests/fixtures/vault_23/projects/: project1  project2
src/tests/fixtures/vault_24/projects/subdir/: project
src/tests/fixtures/vault_3/projects/: note_with_todos
src/tests/fixtures/vault_7/projects/: project_1
src/tests/fixtures/vault_7/projects/category_1/: project_2
src/tests/fixtures/vault_9/projects/: Todo
src/tests/notes/: test_notes.py
src/tests/notes/fixtures/: note
src/tests/scheduling/: test_scheduling.py
src/tests/scheduling/fixtures/: scheduling_1
