[tool.poetry]
name = "pma"
version = "0.1.0"
description = "Personal Management App"
authors = ["Igor Markov <i.markov@redmadrobot.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.3"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.21.0"
todoist-api-python = "^2.0.2"
httpx = "^0.24.1"
ticktick-py = "^2.0.3"
pydantic-settings = "^2.0.2"
autoflake = "^2.2.0"
black = "^23.7.0"
isort = "^5.12.0"
emoji = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = "true"
